Kickback machinery to translate views over sharded collections doesn't properly work under 'available' read concern

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0, 7.3.3
    • Affects Version/s: 4.4.0, 5.0.0, 6.0.0, 7.0.0, 7.2.0
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v7.3, v7.0
    • CAR Team 2024-03-04, CAR Team 2024-03-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a shard processes an operation with available read concern, the shard version attached to the command are ignored and, from the point of view of the CollectionShardingRuntime, the Collection is considered as if it was UNSHARDED (getCollectionDescription, getOwnershipFilter). For views over sharded collections with available read concern, we believe that the operation can be solved on the primary shard because the CollectionShardingRuntime says that the collection is UNSHARDED, avoiding to use the kickback machinery.

            Assignee:
            Yuhong Zhang
            Reporter:
            Sergi Mateo Bellido
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: