SERVER-86667 Treat readConcern `available` query on view from router correctly (#19595)

GitOrigin-RevId: 7a7e43552271140ee03eda5fa8995c5d3f3a5f1e